--- a/backend/package.json
+++ b/backend/package.json
@@ -13,27 +13,25 @@
     "api",
     "rest",
     "express",
-    "oracle",
-    "jwt"
+    "oracle"
   ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "oracledb": "^6.3.0",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "express-session": "^1.18.2",
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "oracledb": "^6.3.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   }
 }
-
